Ajusta layout de emissao e cotacao

--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -179,7 +179,7 @@
     <div class="app-shell__content">
         <header class="app-header">
             <div class="app-header__left">
-                <button class="icon-button menu-button" type="button" aria-label="Abrir menu" data-sidebar-open>
+                <button class="icon-button menu-button" type="button" aria-label="Abrir menu" data-sidebar-toggle>
                     <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                         <path d="M4 6h16M4 12h16M4 18h16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
                     </svg>
@@ -226,7 +226,6 @@
 
 <script src="{% static 'gestao/js/admin_layout.js' %}" defer></script>
 <script src="{% static 'gestao/js/forms.js' %}" defer></script>
-<script src="{% static 'gestao/js/sidebar.js' %}" defer></script>
 
 </body>
 </html>
