--- a/painel_cliente/templates/painel_cliente/base_painel.html
+++ b/painel_cliente/templates/painel_cliente/base_painel.html
@@ -68,7 +68,7 @@
                         </svg>
                     </button>
                     <h2 class="app-header__title">
-                        {% block page_title %}{% block title %}Painel do Cliente{% endblock %}{% endblock %}
+                        {% block page_title %}Painel do Cliente{% endblock %}
                     </h2>
                 </div>
                 <div class="app-header__actions">
